<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/sideNavGroupMain">
        <item
            android:id="@+id/sideNavHome"
            android:checked="true"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/side_nav_home_title" />
        <item
            android:id="@+id/sideNavProfile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/side_nav_profile_title"
            android:visible="true" />
        <item
            android:id="@+id/sideNavOrders"
            android:icon="@drawable/baseline_order_list_24"
            android:title="@string/side_nav_orders_title"
            android:visible="true" />
        <item
            android:id="@+id/sideNavMessages"
            android:icon="@drawable/baseline_message_24"
            android:title="@string/side_nav_messages_title"
            android:visible="true" />
        <item
            android:id="@+id/sideNavSettings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/side_nav_settings_title"
            android:visible="true" />
    </group>
    <group android:id="@+id/sideNavGroupAuth">
        <item
            android:id="@+id/sideNavLogin"
            android:icon="@drawable/baseline_login_24"
            android:title="@string/side_nav_login_title" />
        <item
            android:id="@+id/sideNavLogout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/side_nav_logout_title"
            android:visible="true" />
    </group>
</menu>